fixed header position

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>My Landing Page</h1>
-      <a href="#contactinfo">Go to Contact Info Form</a>
+      <a id="contactLink" href="#contactinfo">Go to Contact Form</a>
     </header>
     <section class="section1">
       <img src="./assets/images/image.png" alt="coding logo" />
